--- a/package.json
+++ b/package.json
@@ -1,52 +1,48 @@
 {
-  "name": "rest-mongo",
+  "name": "express-mongo-scaffold",
   "version": "1.0.0",
   "main": "src",
   "private": true,
   "scripts": {
     "start": "node .",
-    "test": "jest --detectOpenHandles",
-    "coverage": "npm test -- --coverage",
-    "postcoverage": "codecov",
     "dev": "nodemon -i \"*.test.js\" .",
     "prod": "pm2-runtime process.yml",
+    "test": "jest --detectOpenHandles",
     "lint": "eslint src",
-    "fixlint": "eslint src --fix",
-    "docs": "apidoc -i src -o docs && apidoc-markdown -p docs -o DOCS.md",
-    "postdocs": "opn docs/index.html"
+    "coverage": "npm test -- --coverage",
+    "postcoverage": "codecov"
   },
   "jest": {
     "testEnvironment": "node",
     "setupFilesAfterEnv": [
       "<rootDir>/test/setup.js"
     ],
+    "modulePaths": [
+      "<rootDir>/src/",
+      "<rootDir>/test/"
+    ],
     "coverageDirectory": "./coverage/",
     "collectCoverage": true
   },
   "devDependencies": {
-    "apidoc": "^0.17.7",
-    "apidoc-markdown": "^0.2.1",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
-    "codecov": "^3.5.0",
-    "cross-env": "^5.0.5",
+    "babel-eslint": "^10.1.0",
     "dotenv-safe": "^6.1.0",
-    "eslint": "^5.16.0",
+    "eslint": "^5.16",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^9.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "jest-cli": "^24.8.0",
-    "mongodb-memory-server": "^1.7.3",
-    "nock": "^10.0.6",
-    "nodemon": "^1.19.0",
-    "opn-cli": "^3.1.0",
-    "sinon": "^7.3.2",
-    "supertest": "^4.0.2"
+    "husky": "^3.0.1",
+    "jest": "^29",
+    "mongodb-memory-server": "^10.1.3",
+    "nock": "^13.5.5",
+    "nodemon": "^3.0.3",
+    "supertest": "^4",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.5"
   },
   "dependencies": {
-    "@sendgrid/mail": "^6.3.1",
     "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-transform-destructuring": "^7.4.4",
@@ -54,32 +50,29 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.4.4",
-    "aws-sdk": "^2.471.0",
-    "bcrypt": "^5.0.0",
-    "bluebird": "^3.5.5",
+    "@sendgrid/mail": "^6.3.1",
+    "app-module-path": "^2.2.0",
+    "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "bodymen": "^1.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.4",
     "express": "^4.17.1",
-    "file-type": "^10.11.0",
-    "firebase-admin": "^7.4.0",
-    "image-data-uri": "^2.0.0",
     "jsend": "^1.0.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.11",
-    "mongoose": "^5.7.5",
-    "mongoose-create-unique": "^0.4.4",
-    "mongoose-keywords": "^0.4.0",
+    "mongoose": "^8",
+    "mongoose-autopopulate": "^1.1",
+    "mongoose-delete": "^0.5.4",
+    "mongoose-keywords": "^0.4.1",
     "morgan": "^1.7.0",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
-    "pm2": "^3.5.1",
+    "pm2": "^5.2.2",
     "querymen": "^2.1.4",
-    "rand-token": "^0.4.0",
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "rand-token": "^0.4.0"
   }
 }
