--- a/package.json
+++ b/package.json
@@ -9,37 +9,27 @@
     "prod": "pm2-runtime process.yml",
     "test": "jest --detectOpenHandles",
     "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "coverage": "npm test -- --coverage",
     "postcoverage": "codecov"
   },
-  "jest": {
-    "testEnvironment": "node",
-    "setupFilesAfterEnv": [
-      "<rootDir>/test/setup.js"
-    ],
-    "modulePaths": [
-      "<rootDir>/src/",
-      "<rootDir>/test/"
-    ],
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true
-  },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
+    "@babel/eslint-parser": "^7.27.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.23.0",
     "dotenv-safe": "^6.1.0",
-    "eslint": "^5.16",
-    "eslint-config-standard": "^12.0.0",
+    "eslint": "^9",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-node": "^9.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-n": "^17.17.0",
+    "eslint-plugin-promise": "^7.2.1",
     "husky": "^3.0.1",
     "jest": "^29",
     "mongodb-memory-server": "^10.1.3",
     "nock": "^13.5.5",
     "nodemon": "^3.0.3",
-    "supertest": "^4",
-    "swagger-jsdoc": "^6.1.0",
+    "supertest": "^7",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.1.5"
   },
   "dependencies": {
@@ -50,12 +40,12 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/register": "^7.4.4",
     "@babel/runtime": "^7.4.4",
-    "@sendgrid/mail": "^6.3.1",
     "app-module-path": "^2.2.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.19.0",
     "bodymen": "^1.1.1",
+    "chalk": "^5.4.1",
     "compression": "^1.7.4",
     "cors": "^2.8.4",
     "express": "^4.17.1",
@@ -64,7 +54,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^8",
     "mongoose-autopopulate": "^1.1",
-    "mongoose-delete": "^0.5.4",
+    "mongoose-delete": "^1.0.2",
     "mongoose-keywords": "^0.4.1",
     "morgan": "^1.7.0",
     "passport": "^0.6.0",
